tests/NormalTests/paczka1/fuzzy1/40558371.err
Error in line 25: g8YOkRIZx S731 10,9
Error in line 24: NyeI S907 42,9
